saint-lascivious.github.io: a lot
Changes to be committed:
 - modified:   .formatted/265.html
 - modified:   .formatted/404.html
 - modified:   .formatted/archive.html
 - modified:   .formatted/connecttosainternet.html
 - modified:   .formatted/debug.html
 - modified:   .formatted/devdiary.html
 - modified:   .formatted/filtereddns.html
 - modified:   .formatted/frequentlyaskedquestions.html
 - modified:   .formatted/index.html
 - modified:   .formatted/newsandupdates.html
 - modified:   .formatted/pokedexoverdns.html
 - modified:   .formatted/portsandprotocols.html
 - modified:   .formatted/projects.html
 - modified:   .formatted/reportaproblem.html
 - modified:   .formatted/serviceworker.min.js
 - modified:   .formatted/technologies.html
 - modified:   .formatted/testsainternet.html
 - modified:   265.html
 - modified:   404.html
 - modified:   archive.html
 - modified:   connecttosainternet.html
 - modified:   debug.html
 - modified:   devdiary.html
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   index.html
 - modified:   newsandupdates.html
 - modified:   pokedexoverdns.html
 - modified:   portsandprotocols.html
 - modified:   projects.html
 - modified:   reportaproblem.html
 - modified:   resources/stylesheets/.formatted/shadow-boxing.min.css
 - modified:   resources/stylesheets/shadow-boxing.min.css
 - modified:   serviceworker.min.js
 - modified:   technologies.html
 - modified:   testsainternet.html

--- a/.formatted/404.html
+++ b/.formatted/404.html
@@ -192,25 +192,23 @@
             <p>
               Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.
             </p>
-            <span id="tooltip-alttext">
-              <a href="pokedexoverdns.html" class="subterfuge">
-                <picture class="light-mode-img">
-                  <source srcset="resources/images/luxio.webp" type="image/webp">
-                  <source srcset="resources/images/luxio.png" type="image/png">
-                  <source srcset="resources/images/luxio.jpeg" type="image/jpeg">
-                  <img src="resources/images/luxio.jpg" width="480" height="480" alt="Pokémon #404, Luxio (Spark Pokémon): Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.">
-                </picture>
-                <picture class="dark-mode-img">
-                  <source srcset="resources/images/luxio-shiny.webp" type="image/webp">
-                  <source srcset="resources/images/luxio-shiny.png" type="image/png">
-                  <source srcset="resources/images/luxio-shiny.jpeg" type="image/jpeg">
-                  <img src="resources/images/luxio-shiny.jpg" width="480" height="480" alt="Pokémon #404, Luxio (Spark Pokémon): Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.">
-                </picture>
-              </a>
-            </span>
-            <span class="mdl-tooltip mdl-tooltip--right" for="tooltip-alttext">
+            <a href="pokedexoverdns.html" class="subterfuge">
+              <picture class="light-mode-img">
+                <source srcset="resources/images/luxio.webp" type="image/webp">
+                <source srcset="resources/images/luxio.png" type="image/png">
+                <source srcset="resources/images/luxio.jpeg" type="image/jpeg">
+                <img src="resources/images/luxio.jpg" width="480" height="480" alt="Pokémon #404, Luxio (Spark Pokémon): Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.">
+              </picture>
+              <picture class="dark-mode-img">
+                <source srcset="resources/images/luxio-shiny.webp" type="image/webp">
+                <source srcset="resources/images/luxio-shiny.png" type="image/png">
+                <source srcset="resources/images/luxio-shiny.jpeg" type="image/jpeg">
+                <img src="resources/images/luxio-shiny.jpg" width="480" height="480" alt="Pokémon #404, Luxio (Spark Pokémon): Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.">
+              </picture>
+            </a>
+            <a class="mdl-tooltip mdl-tooltip--right" for="tooltip-alttext-404">
               Pokémon #404, Luxio (Spark Pokémon): Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.
-            <span>
+            </a>
           </div>
         </div>
         <div class="sainternet-container mdl-grid" id="404examplequeries">
@@ -375,5 +373,8 @@
       </div>
     </footer>
     <a href="index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--4dp enlift"><icon class="material-icons">home</icon></a>
+    <a class="mdl-tooltip mdl-tooltip--left" for="button_home">
+      Back to Home page.
+    </a>
   </body>
 </html>
