--- a/.formatted/265.html
+++ b/.formatted/265.html
@@ -190,25 +190,23 @@
             <p>
               Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping.
             </p>
-            <span id="tooltip-alttext">
-              <a href="pokedexoverdns.html" class="subterfuge">
-                <picture class="light-mode-img">
-                  <source srcset="resources/images/wurmple.webp" type="image/webp">
-                  <source srcset="resources/images/wurmple.png" type="image/png">
-                  <source srcset="resources/images/wurmple.jpeg" type="image/jpeg">
-                  <img src="resources/images/wurmple.jpg" width="480" height="480" alt="Pokémon #265, Wurmple: Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping.">
-                </picture>
-                <picture class="dark-mode-img">
-                  <source srcset="resources/images/wurmple-shiny.webp" type="image/webp">
-                  <source srcset="resources/images/wurmple-shiny.png" type="image/png">
-                  <source srcset="resources/images/wurmple-shiny.jpeg" type="image/jpeg">
-                  <img src="resources/images/wurmple-shiny.jpg" width="480" height="480" alt="Pokémon #265, Wurmple: Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping.">
-                </picture>
-              </a>
-            </span>
-            <span class="mdl-tooltip mdl-tooltip--right" for="tooltip-alttext">
+            <a href="pokedexoverdns.html" class="subterfuge" id="tooltip-alttext-265">
+              <picture class="light-mode-img">
+                <source srcset="resources/images/wurmple.webp" type="image/webp">
+                <source srcset="resources/images/wurmple.png" type="image/png">
+                <source srcset="resources/images/wurmple.jpeg" type="image/jpeg">
+                <img src="resources/images/wurmple.jpg" width="480" height="480" alt="Pokémon #265, Wurmple: Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping.">
+              </picture>
+              <picture class="dark-mode-img">
+                <source srcset="resources/images/wurmple-shiny.webp" type="image/webp">
+                <source srcset="resources/images/wurmple-shiny.png" type="image/png">
+                <source srcset="resources/images/wurmple-shiny.jpeg" type="image/jpeg">
+                <img src="resources/images/wurmple-shiny.jpg" width="480" height="480" alt="Pokémon #265, Wurmple: Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping.">
+              </picture>
+            </a>
+            <a class="mdl-tooltip mdl-tooltip--top" for="tooltip-alttext-265">
               Pokémon #265, Wurmple: Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping.
-            <span>
+            </a>
           </div>
         </div>
         <div class="sainternet-container mdl-grid" id="265examplequeries">
@@ -373,5 +371,8 @@
       </div>
     </footer>
     <a href="index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--4dp enlift"><icon class="material-icons">home</icon></a>
+    <a class="mdl-tooltip mdl-tooltip--left" for="button_home">
+      Back to Home page.
+    </a>
   </body>
 </html>
