--- a/.formatted/debug.html
+++ b/.formatted/debug.html
@@ -274,5 +274,8 @@
       </div>
     </footer>
     <a href="index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--4dp enlift"><icon class="material-icons">home</icon></a>
+    <a class="mdl-tooltip mdl-tooltip--left" for="button_home">
+      Back to Home page.
+    </a>
   </body>
 </html>
